# test_package_template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst  source.rst
test_package_template/scripts/: entrypoint.py
tests/: test_utils.py
