[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "My Package"
version = "0.1.0"
description = "Description of the package"
authors = ["John Doe <johndoe@mail.com>"]
readme = "README.md"
keywords = ["my_package"]
packages = [
    { include = "my_package" },
]

[[tool.poetry.source]]
name = "default_pypi"
url = "https://pypi.python.org/simple"
secondary = false

[tool.poetry.dependencies]
python = "^3.8.6"
python-dotenv="^0.13.0"
boto3="1.26.40"
requests="2.27.1"
psycopg2-binary="2.9.3"
jinja2="3.0.3"

[tool.poetry.dev-dependencies]
mypy="^0.940"
pre-commit="2.9.2"
pylint="2.5.2"
detect-secrets="0.14.2"
black="19.10b0"
isort="4.3.21"

mock="4.0.3"
coverage="6.3.1"
nose="1.3.7"
freezegun="1.1.0"
commitizen = "2.20.1"
Sphinx="1.8.4"
sphinxcontrib-confluencebuilder = "1.8.0"
sphinx_rtd_theme="0.4.3"
m2r="0.2.1"
mistune="0.8.4"
[tool.poetry.scripts]
run = "my_package.scripts.entrypoint:main"

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/my_package"
namespace_packages = true
explicit_package_bases = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true

disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_any_explicit = false
disallow_subclassing_any = false

ignore_missing_imports = true

check_untyped_defs = true
no_implicit_optional = true
strict_optional = true

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = 'True'
known_first_party='lumi'
force_grid_wrap=0
combine_as_imports='True'

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "docs/conf.py:version",
    ]
update_changelog_on_bump = true
